fixed issue when progress bar was not visible after header was pulled down on scrollup

--- a/public/css/single-post.css
+++ b/public/css/single-post.css
@@ -150,7 +150,7 @@ progressBar.ag-article-progressBar {
   top: 0;
   height: 5px;
   width: 0%; /* Default value */
-  transition: width 0.1s ease, opacity 0.1s ease-in-out;
+  transition: width 0.1s ease, opacity 0.1s ease-in-out, transform .6s cubic-bezier(.49,.01,.04,.94);
   background-color: #2874fc;
   z-index: 999;
 }
